Fix spacing of ally map spacing

--- a/src/modules/image-upscaling/styles.css
+++ b/src/modules/image-upscaling/styles.css
@@ -87,7 +87,7 @@
 }
 
 .treasureMapView-allyCell {
-  padding: 6px 3px;
+  padding: 5px 2px;
 }
 
 .treasureMapView-allyCell .treasureMapView-componentContainer {
